Mon Dec  9 15:26:17 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* test/test_curses.rb: removed.

Mon Dec  9 13:36:55 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses, sample/curses: removed curses.

	* NEWS: added an entry for the above change.

Mon Dec  9 12:26:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/objspace/object_tracing.c (newobj_i): use cached class path
	  only to get rid object allocation during NEWOBJ hook.
	  [ruby-core:58853] [Bug #9212]

	* variable.c (rb_class_path_cached): returns cached class path
	  only, without searching and allocating new class path string.

Mon Dec  9 11:14:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_parse.c (parse_time): unset case-insensitive flag
	  for [:alpha:], which already implies both cases, to get rid of
	  backtrack explosion.  [ruby-core:58876] [Bug #9221]

Mon Dec  9 08:40:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master bf37240.  Fixes useless
	  error message with `gem install -g` with no gem dependencies file.
	* test/rubygems:  ditto.

Mon Dec  9 04:52:25 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS:  Update RubyGems entry with notable features.

Mon Dec  9 04:43:54 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Add syslog/lib and thread/thread.c to documentable
	  items.  [ruby-trunk - Bug #9228]

Mon Dec  9 04:28:50 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 096db36.  Changes include
	  support for PATH in Gemfile.lock and a typo fix from Akira Matsuda.
	* test/rubygems:  ditto.

Mon Dec  9 02:10:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/responses.rb:
	  Add `HTTPIMUsed`, as it is also supported by rack/rails.
	  RFC - http://tools.ietf.org/html/rfc3229
	  by Vipul A M <vipulnsward@gmail.com>
	  https://github.com/ruby/ruby/pull/447 fix GH-447

Sun Dec  8 20:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
